--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@ ul {
   padding: 0;
 }
 
+button {
+  border: none;
+}
+
 .call-us {
   border-radius: 5px;
   background: linear-gradient(95deg, #304259 27.16%, #347BD9 170.44%);
@@ -160,18 +164,14 @@ nav ul li a:hover svg path {
   align-items: center;
   gap: 10px;
   border-radius: 5px;
-  border: none;
   background: linear-gradient(95deg, #304259 27.16%, #347BD9 170.44%);
+  color: #E1E1E1;
+  text-align: center;
   font-family: Tajawal;
-  font-size: 16px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 800;
-  color: #E1E1E1;
-  transition: background 3s ease;
-  -webkit-transition: background 3s ease;
-  -moz-transition: background 3s ease;
-  -ms-transition: background 3s ease;
-  -o-transition: background 3s ease;
+  line-height: 150%;
 }
 
 .ask-request:hover {
@@ -325,142 +325,16 @@ nav a.active {
 /************************************ EN VIDEO  ************************************/
 
 /************************************ START ARTICLEL  ************************************/
-#articles {
-  padding: 80px 0;
-  background: rgba(27, 64, 113, 0.05);
-}
-
-#articles .row {
-  padding-top: 60px;
-}
-
-#articles h3 {
-  color: #1B4071;
-  text-align: center;
-  font-family: Tajawal;
-  font-size: 48px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 150%;
-}
-
-#articles .article-block {
-  height: 260px;
-  position: relative;
-  cursor: pointer;
-}
-
-#articles .one {
-  background: url(../imgs/articles/1.png) center center/cover;
-}
-
-#articles .two {
-  background: url(../imgs/articles/2.png) center center/cover;
-}
-
-#articles .three {
-  background: url(../imgs/articles/3.png) center center/cover;
-}
-
-#articles .four {
-  background: url(../imgs/articles/4.png) center center/cover;
-}
-
-#articles .five {
-  background: url(../imgs/articles/5.png) center center/cover;
-}
-
-#articles .six {
-  background: url(../imgs/articles/6.png) center center/cover;
-}
-
-#articles .siven {
-  background: url(../imgs/articles/7.png) center center/cover;
-}
-
-#articles .eight {
-  background: url(../imgs/articles/8.png) center center/cover;
-}
-
-#articles .nine {
-  background: url(../imgs/articles/9.png) center center/cover;
-}
-
-#articles .ten {
-  background: url(../imgs/articles/10.png) center center/cover;
-}
-
-#articles .eleven {
-  background: url(../imgs/articles/11.png) center center/cover;
-}
-
-#articles .title {
-  color: #333;
-  font-family: Tajawal;
-  font-size: 31px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 150%;
-  transition: .2s linear;
-  -webkit-transition: .2s linear;
-  -moz-transition: .2s linear;
-  -ms-transition: .2s linear;
-  -o-transition: .2s linear;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  padding: 0 0 60px 100px;
-  width: 100%;
-}
-
-#articles .article-block .content-layer {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  opacity: 0;
-  transition: .2s linear;
-  -webkit-transition: .2s linear;
-  -moz-transition: .2s linear;
-  -ms-transition: .2s linear;
-  -o-transition: .2s linear;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  padding: 0 0 50px 120px;
-}
-
-#articles .article-block:hover .content-layer {
-  opacity: 1;
-}
-
-#articles .article-block:hover .title {
-  opacity: 0;
-}
-
-#articles .article-block .content-layer p {
-  display: inline-flex;
-  justify-content: flex-end;
-  align-items: center;
-  color: #333;
-  text-align: center;
-  font-family: Tajawal;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 120%;
-}
 
 /************************************ END ARTICLEL  ************************************/
 
 /************************************ START SERVICES  ************************************/
 #services {
   padding: 80px 0;
+}
+
+#services .header-content {
+  margin-bottom: 48px;
 }
 
 #services h3 {
@@ -472,7 +346,7 @@ nav a.active {
   font-style: normal;
   font-weight: 700;
   line-height: 150%;
-  margin-bottom: 20px;
+  margin-bottom: 24px;
 }
 
 #services p {
@@ -497,13 +371,24 @@ nav a.active {
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
-  transition: .2s linear;
-  -webkit-transition: .2s linear;
-  -moz-transition: .2s linear;
-  -ms-transition: .2s linear;
-  -o-transition: .2s linear;
+  transition: all .2s linear;
+  -webkit-transition: all .2s linear;
+  -moz-transition: all .2s linear;
+  -ms-transition: all .2s linear;
+  -o-transition: all .2s linear;
   min-height: 100%;
   cursor: pointer;
+}
+
+#services .service-block p {
+  color: #333;
+  text-align: center;
+  font-family: Tajawal;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+  width: 293.003px;
 }
 
 #services .service-block .img {
@@ -518,7 +403,7 @@ nav a.active {
   background: linear-gradient(89deg, #1B4071 11.59%, #78A5DF 139.53%);
   overflow: hidden;
   padding: 20px;
-  border: 0px solid #fff;
+  border: 3px solid #fff;
 }
 
 #services .service-block .img svg path,
@@ -548,7 +433,7 @@ nav a.active {
 }
 
 #services .service-block:hover .img {
-  border-width: 3px;
+  border-style: solid;
   background-color: transparent;
 }
 
@@ -621,6 +506,8 @@ nav a.active {
 #testimonial {
   padding: 128px 0;
 }
+
+
 
 #testimonial h3 {
   color: #181818;
@@ -869,6 +756,7 @@ nav a.active {
   font-style: normal;
   font-weight: 500;
   line-height: 120%;
+  width: 279px;
 }
 
 #portfolio button {
@@ -930,28 +818,6 @@ nav a.active {
   width: 170px;
 }
 
-#carousel .swiper-button-next {
-  left: 0px;
-  top: 39%;
-  transform: translateY(50%);
-  -webkit-transform: translateY(50%);
-  -moz-transform: translateY(50%);
-  -ms-transform: translateY(50%);
-  -o-transform: translateY(50%);
-  background-color: transparent;
-}
-
-#carousel .swiper-button-prev {
-  right: 20px;
-  top: 39%;
-  transform: translateY(50%);
-  -webkit-transform: translateY(50%);
-  -moz-transform: translateY(50%);
-  -ms-transform: translateY(50%);
-  -o-transform: translateY(50%);
-  background-color: transparent;
-}
-
 /************************************ END carousel  ************************************/
 
 /************************************ START Other Testimonial  ************************************/
@@ -964,6 +830,7 @@ nav a.active {
 /************************************ START Last Blog ************************************/
 #last-blog {
   padding: 128px 0;
+  background: rgba(27, 64, 112, 0.05);
 }
 
 #last-blog h3 {
@@ -1013,13 +880,25 @@ nav a.active {
   align-items: center;
   gap: 8px;
   border-radius: 5px;
-  border: 0.2px solid #333;
+  border: 0.2px solid #979797;
   background: #FFF;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
+  color: #979797;
+  text-align: right;
+  font-family: Cabin;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 140%;
 }
+
+#last-blog input:focus {
+  outline: none;
+}
+
 
 #last-blog .last-blog-block div button {
   display: flex;
@@ -1067,8 +946,6 @@ nav a.active {
 }
 
 #last-blog .top div button {
-  border-radius: 5px;
-  background: #fff;
   display: flex;
   width: 117.968px;
   height: 38.852px;
@@ -1077,18 +954,14 @@ nav a.active {
   align-items: center;
   gap: 10px;
   flex-shrink: 0;
-  color: var(--base, #1B4071);
+  border-radius: 5px;
+  background: #FFF;
+  color: #1B4071;
   font-family: Cabin;
+  font-size: 14px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  text-transform: capitalize;
-  border: none;
-  transition: .3s linear;
-  -webkit-transition: .3s linear;
-  -moz-transition: .3s linear;
-  -ms-transition: .3s linear;
-  -o-transition: .3s linear;
 }
 
 #last-blog .bottom {
@@ -3023,10 +2896,6 @@ footer .last-block a {
     left: -18px;
   }
 
-  #articles .title {
-    padding: 0 0 60px 135px;
-  }
-
   .our-importent-row {
     flex-direction: column;
   }
@@ -3176,18 +3045,6 @@ footer .last-block a {
     display: none;
   }
 
-  #articles .article-block .content-layer {
-    padding: 0 0 50px 130px;
-  }
-
-  #articles .title {
-    font-size: 32px;
-  }
-
-  #articles .article-block {
-    height: 430px;
-  }
-
   #statistics .statistics-block {
     padding: 30px 0px;
   }
@@ -3239,10 +3096,6 @@ footer .last-block a {
 
   .headerContent h1 {
     font-size: 40px;
-  }
-
-  #articles .article-block {
-    height: 315px;
   }
 
   #testimonial h3 {
@@ -3430,7 +3283,6 @@ footer .last-block a {
 
   #video,
   #statistics,
-  #articles,
   #services,
   #testimonial,
   #planning,
@@ -3707,7 +3559,7 @@ footer .last-block a {
 
 /* swiper button css */
 .nav-btn {
-  font-size: 0;
+  font-size: 20px;
 }
 
 .swiper-button-prev:after,
@@ -3744,12 +3596,13 @@ footer .last-block a {
 #testimonial .swiper-pagination-bullets.swiper-pagination-horizontal,
 #testimonial .swiper-pagination-custom,
 #testimonial .swiper-pagination-fraction {
-  bottom: -1px;
+  bottom: -48px;
 }
 
 #testimonial .swiper {
   overflow-x: hidden !important;
   overflow-x: clip !important;
+  overflow-y: visible;
 }
 
 .copyRight {
@@ -4192,21 +4045,6 @@ form .submit {
   -ms-transform: translateX(-50%);
   -o-transform: translateX(-50%);
 }
-
-.layer-for-header-slider {
-  position: relative;
-}
-
-.layer-for-header-slider::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.50) 0%, rgba(0, 0, 0, 0.50) 100%);
-  z-index: 2;
-}
-
 .header img {
   width: 100%;
   height: 100vh;
