--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&family=Lato:wght@100;300;400;700;900&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap');
+
 body {
   direction: rtl;
 }
@@ -72,6 +74,16 @@ button {
   justify-content: center;
   color: #fff;
   z-index: 999;
+}
+
+.headerContent h1 {
+  color: #FFF;
+  text-align: center;
+  /* font-family: Cabin; */
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
 }
 
 nav ul li a,
@@ -182,6 +194,11 @@ nav ul li a:hover svg path {
 .nav-link:hover {
   color: #fff;
 }
+
+/* .nav-link-2:focus,
+.nav-link-2:hover {
+  color: #347BD9;
+} */
 
 .social-media {
   height: 40px;
@@ -609,6 +626,28 @@ nav a.active {
   background: linear-gradient(89deg, #1B4071 11.59%, #78A5DF 139.53%);
 }
 
+#planning .up {
+  display: flex;
+  gap: 80px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#planning .imgs-container {
+  flex: 1 0 0
+}
+
+#planning .planning-content {
+  display: flex;
+  width: 607px;
+  height: 435px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 24px;
+  flex-shrink: 0;
+}
+
 #planning h3 {
   color: #FFF;
   text-align: center;
@@ -650,36 +689,6 @@ nav a.active {
 #planning figure {
   position: relative;
   height: 435px;
-}
-
-#planning figure img {
-  position: absolute;
-  top: 0;
-}
-
-#planning figure img.one {
-  right: 10px;
-  top: 10px;
-}
-
-#planning figure img.two {
-  right: 20px;
-  top: 20px;
-}
-
-#planning figure img.three {
-  right: 30px;
-  top: 30px;
-}
-
-#planning figure img.four {
-  right: 40px;
-  top: 40px;
-}
-
-#planning figure img.five {
-  right: 50px;
-  top: 50px;
 }
 
 /************************************ END Planning  ************************************/
@@ -814,8 +823,9 @@ nav a.active {
   justify-content: center;
 }
 
-#carousel .swiper-wrapper div img {
-  width: 170px;
+#carousel .nav-btn i {
+  color: #000;
+  font-weight: 300;
 }
 
 /************************************ END carousel  ************************************/
@@ -831,6 +841,10 @@ nav a.active {
 #last-blog {
   padding: 128px 0;
   background: rgba(27, 64, 112, 0.05);
+}
+
+#last-blog .row {
+  padding: 64px 0;
 }
 
 #last-blog h3 {
@@ -977,7 +991,7 @@ nav a.active {
 
 #last-blog .bottom h5 {
   color: #FFF;
-  font-family: Cabin;
+  /* font-family: Cabin; */
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -986,7 +1000,7 @@ nav a.active {
 
 #last-blog .bottom p {
   color: #FFF;
-  font-family: Cabin;
+  /* font-family: Cabin; */
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -996,7 +1010,7 @@ nav a.active {
 
 #last-blog .bottom a {
   color: #FFF;
-  font-family: Cabin;
+  /* font-family: Cabin; */
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -1026,9 +1040,13 @@ footer .media a {
 }
 
 footer .media a i {
-  margin-top: 10px;
   font-size: 24px;
   color: #fff !important;
+}
+
+footer .media a img {
+  width: 24px;
+  height: 24px;
 }
 
 footer h4 {
@@ -1049,17 +1067,17 @@ footer p {
   font-style: normal;
   font-weight: 400;
   line-height: 150%;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 footer a {
   color: #E3E3E3;
   font-family: Tajawal;
-  font-size: 14px;
+  font-size: 13px;
   font-style: normal;
   font-weight: 400;
   line-height: 150%;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
   display: block;
 }
 
@@ -1507,6 +1525,9 @@ footer .last-block a {
   height: 54px;
   padding: 12px;
   margin: auto;
+  border-radius: 5px;
+  border: 0.2px solid #ccc;
+  background: rgba(27, 64, 112, 0.05);
 }
 
 #our-gallery .search button {
@@ -1543,7 +1564,6 @@ footer .last-block a {
 
 #our-gallery .main-block .block .top {
   height: 222px;
-  background: url(../imgs/blog-1.webp) no-repeat top center/cover;
   border-radius: 10px 10px 0px 0px;
   -webkit-border-radius: 10px 10px 0px 0px;
   -moz-border-radius: 10px 10px 0px 0px;
@@ -1552,20 +1572,49 @@ footer .last-block a {
   padding: 20px;
 }
 
-#our-gallery .main-block .block .top:nth-child(2) {
-  height: 222px;
-  background: url(../imgs/blog-2.png) no-repeat top center/cover;
-  border-radius: 10px 10px 0px 0px;
-  -webkit-border-radius: 10px 10px 0px 0px;
-  -moz-border-radius: 10px 10px 0px 0px;
-  -ms-border-radius: 10px 10px 0px 0px;
-  -o-border-radius: 10px 10px 0px 0px;
-  padding: 20px;
+#our-gallery .main-block .block .top.one {
+  background: url(../imgs/blog-1.webp) no-repeat top center/cover;
+}
+
+#our-gallery .main-block .block .top.two {
+  background: url(../imgs/blog-2.webp) no-repeat top center/cover;
+}
+
+#our-gallery .main-block .block .top.three {
+  background: url(../imgs/blog-3.webp) no-repeat top center/cover;
+}
+
+#our-gallery .main-block .block .top.four {
+  background: url(../imgs/blog-4.webp) no-repeat top center/cover;
+}
+
+#our-gallery .main-block .block .top.five {
+  background: url(../imgs/blog-5.webp) no-repeat top center/cover;
+}
+
+#our-gallery .main-block .block .top.six {
+  background: url(../imgs/blog-6.webp) no-repeat top center/cover;
+}
+
+#our-gallery .main-block .block .top.seven {
+  background: url(../imgs/blog-6.webp) no-repeat top center/cover;
+}
+
+#our-gallery .main-block .block .top.eight {
+  background: url(../imgs/blog-8.webp) no-repeat top center/cover;
+}
+
+#our-gallery .main-block .block .top.nine {
+  background: url(../imgs/blog-9.webp) no-repeat top center/cover;
+}
+
+#our-gallery .main-block .block .top.ten {
+  background: url(../imgs/blog-10.webp) no-repeat top center/cover;
 }
 
 #our-gallery .main-block .block .top button {
   border-radius: 5px;
-  background: linear-gradient(to right, #39b9c3 50%, #fff 50%) no-repeat scroll right bottom / 210% 100% #39b9c3 !important;
+  background: #fff;
   display: flex;
   width: 117.968px;
   height: 38.852px;
@@ -1587,11 +1636,6 @@ footer .last-block a {
   -moz-transition: .3s linear;
   -ms-transition: .3s linear;
   -o-transition: .3s linear;
-}
-
-#our-gallery .main-block .block .top button:hover {
-  color: #fff !important;
-  background-position: left bottom !important;
 }
 
 #our-gallery .main-block .block .bottom {
@@ -2457,7 +2501,7 @@ footer .last-block a {
 }
 
 #info-gallery {
-  padding: 128px 0;
+  padding: 228px 0 128px;
 }
 
 #info-gallery h1 {
@@ -2468,6 +2512,11 @@ footer .last-block a {
   font-style: normal;
   font-weight: 700;
   line-height: 150%;
+}
+
+#info-gallery .info-gallery-container {
+  width: 962px;
+  margin: 0 auto;
 }
 
 #info-gallery .first-row {
@@ -2506,7 +2555,6 @@ footer .last-block a {
 }
 
 #info-gallery .second-row p {
-  color: #444;
   text-align: right;
   font-family: Tajawal;
   font-size: 28px;
@@ -2517,7 +2565,7 @@ footer .last-block a {
 }
 
 #info-gallery .row-three {
-  padding: 64px 0;
+  padding: 128px 0 64px;
 }
 
 #info-gallery .row-three h2 {
@@ -2636,7 +2684,8 @@ footer .last-block a {
 
 #info-gallery .second-row ul {
   list-style-type: disc;
-  list-style-position: inside;
+  margin: 0 40px 0 0;
+  padding: 0;
 }
 
 #info-gallery .second-row ul li {
@@ -2648,6 +2697,8 @@ footer .last-block a {
   font-weight: 500;
   line-height: 150%;
 }
+
+#info-gallery .second-row ul li::marker {}
 
 #info-gallery .second-row span {
   color: #181818;
@@ -3637,8 +3688,15 @@ footer .last-block a {
   line-height: 150% !important;
 }
 
+.modal-dialog {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .modal-content {
   background: rgba(27, 64, 113, 0.05) !important;
+  width: 837px;
 }
 
 .modal-footer button {
@@ -3684,10 +3742,17 @@ footer .last-block a {
   display: inline-flex;
   height: 54px;
   padding: 12px;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
   gap: 8px;
   flex-shrink: 0;
+  color: #979797;
+  text-align: right;
+  font-family: Cabin;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 140%;
 }
 
 .modal-body form textarea {
@@ -3700,6 +3765,7 @@ footer .last-block a {
   flex-shrink: 0;
   resize: none;
   margin-top: 16px;
+  /* font-family: Cabin; */
 }
 
 form .submit {
@@ -3764,8 +3830,6 @@ form .submit {
   -o-border-radius: 5px;
 }
 
-
-
 .slider {
   width: 100%;
   margin: 0 auto;
@@ -3789,233 +3853,6 @@ form .submit {
   position: absolute;
   top: 0;
   width: 100%;
-}
-
-.container-layer img:nth-child(1) {
-  opacity: 1;
-  z-index: 4;
-  animation-name: layer1;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-timing-function: ease;
-}
-
-@keyframes layer1 {
-  from {
-    transform: translate(0);
-    -webkit-transform: translate(0);
-    -moz-transform: translate(0);
-    -ms-transform: translate(0);
-    -o-transform: translate(0);
-  }
-
-  to {
-    transform: translate(-45px, 45px);
-    -webkit-transform: translate(-45px, 45px);
-    -moz-transform: translate(-45px, 45px);
-    -ms-transform: translate(-45px, 45px);
-    -o-transform: translate(-45px, 45px);
-  }
-}
-
-.container-layer img:nth-child(2) {
-  opacity: 0.8;
-  z-index: 3;
-  animation-name: layer2;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-timing-function: ease;
-}
-
-@keyframes layer2 {
-  from {
-    transform: translate(0);
-    -webkit-transform: translate(0);
-    -moz-transform: translate(0);
-    -ms-transform: translate(0);
-    -o-transform: translate(0);
-  }
-
-  to {
-    transform: translate(-30px, 30px);
-    -webkit-transform: translate(-30px, 30px);
-    -moz-transform: translate(-30px, 30px);
-    -ms-transform: translate(-30px, 30px);
-    -o-transform: translate(-30px, 30px);
-  }
-}
-
-.container-layer img:nth-child(3) {
-  opacity: 0.6;
-  z-index: 2;
-  animation-name: layer3;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-timing-function: ease;
-}
-
-@keyframes layer3 {
-  from {
-    transform: translate(0);
-    -webkit-transform: translate(0);
-    -moz-transform: translate(0);
-    -ms-transform: translate(0);
-    -o-transform: translate(0);
-  }
-
-  to {
-    transform: translate(-15px, 15px);
-    -webkit-transform: translate(-15px, 15px);
-    -moz-transform: translate(-15px, 15px);
-    -ms-transform: translate(-15px, 15px);
-    -o-transform: translate(-15px, 15px);
-  }
-}
-
-.container-layer img:nth-child(4) {
-  opacity: 0.4;
-  z-index: 1;
-  animation-name: layer4;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-timing-function: ease;
-}
-
-@keyframes layer4 {
-  from {
-    transform: translate(0);
-    -webkit-transform: translate(0);
-    -moz-transform: translate(0);
-    -ms-transform: translate(0);
-    -o-transform: translate(0);
-  }
-
-  to {
-    transform: translate(0, 0);
-    -webkit-transform: translate(0, 0);
-    -moz-transform: translate(0, 0);
-    -ms-transform: translate(0, 0);
-    -o-transform: translate(0, 0);
-  }
-}
-
-
-@media (max-width: 786px) {
-  .container-layer img:nth-child(1) {
-    opacity: 1;
-    z-index: 4;
-    animation-name: layer1;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: ease;
-  }
-
-  @keyframes layer1 {
-    from {
-      transform: translate(0);
-      -webkit-transform: translate(0);
-      -moz-transform: translate(0);
-      -ms-transform: translate(0);
-      -o-transform: translate(0);
-    }
-
-    to {
-      transform: translate(0px, 60px);
-      -webkit-transform: translate(0px, 60px);
-      -moz-transform: translate(0px, 60px);
-      -ms-transform: translate(0px, 60px);
-      -o-transform: translate(0px, 60px);
-    }
-  }
-
-  .container-layer img:nth-child(2) {
-    opacity: 0.8;
-    z-index: 3;
-    animation-name: layer2;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: ease;
-  }
-
-  @keyframes layer2 {
-    from {
-      transform: translate(0);
-      -webkit-transform: translate(0);
-      -moz-transform: translate(0);
-      -ms-transform: translate(0);
-      -o-transform: translate(0);
-    }
-
-    to {
-      transform: translate(0px, 40px);
-      -webkit-transform: translate(0px, 40px);
-      -moz-transform: translate(0px, 40px);
-      -ms-transform: translate(0px, 40px);
-      -o-transform: translate(0px, 40px);
-    }
-  }
-
-  .container-layer img:nth-child(3) {
-    opacity: 0.6;
-    z-index: 2;
-    animation-name: layer3;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: ease;
-  }
-
-  @keyframes layer3 {
-    from {
-      transform: translate(0);
-      -webkit-transform: translate(0);
-      -moz-transform: translate(0);
-      -ms-transform: translate(0);
-      -o-transform: translate(0);
-    }
-
-    to {
-      transform: translate(0px, 20px);
-      -webkit-transform: translate(0px, 20px);
-      -moz-transform: translate(0px, 20px);
-      -ms-transform: translate(0px, 20px);
-      -o-transform: translate(0px, 20px);
-    }
-  }
-
-  .container-layer img:nth-child(4) {
-    opacity: 0.4;
-    z-index: 1;
-    animation-name: layer4;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: ease;
-  }
-
-  @keyframes layer4 {
-    from {
-      transform: translate(0);
-      -webkit-transform: translate(0);
-      -moz-transform: translate(0);
-      -ms-transform: translate(0);
-      -o-transform: translate(0);
-    }
-
-    to {
-      transform: translate(0, 0);
-      -webkit-transform: translate(0, 0);
-      -moz-transform: translate(0, 0);
-      -ms-transform: translate(0, 0);
-      -o-transform: translate(0, 0);
-    }
-  }
 }
 
 @media (max-width: 400px) {
@@ -4045,6 +3882,7 @@ form .submit {
   -ms-transform: translateX(-50%);
   -o-transform: translateX(-50%);
 }
+
 .header img {
   width: 100%;
   height: 100vh;
